cloudformation/nginx.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Architecture
Parameters:
  VPCStackName:
    Type: String
  AccountName:
    Type: String
  Environment:
    Type: String
    AllowedValues:
    - test
    - sviluppo
    - produzione
    - collaudo
    - staging
    - developing
    - production
  Owner:
    Type: String
  CentroCosti:
    Type: String
  Project:
    Type: String
  XPeppersTrentoIp:
    Type: String
    Description: IP Address range for local infrastructure
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
  NginxInstanceType:
    Description: Nginx EC2 instance type
    Type: String
    Default: t2.small
    AllowedValues:
    - t2.nano
    - t2.micro
    - t2.small
    - t2.medium
    - t2.large
    - m4.large
    - m4.xlarge
    - m4.2xlarge
    - m4.4xlarge
    - m4.10xlarge
    - m3.medium
    - m3.large
    - m3.xlarge
    - m3.2xlarge
    - c4.large
    - c4.xlarge
    - c4.2xlarge
    - c4.4xlarge
    - c4.8xlarge
    - c3.large
    - c3.xlarge
    - c3.2xlarge
    - c3.4xlarge
    - c3.8xlarge
    ConstraintDescription: must be a valid EC2 instance type.
  KeyName:
    Description: The EC2 Key Pair to allow SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  MinSizeNginx:
    Type: Number
  MaxSizeNginx:
    Type: Number
  AssignPublicIP:
    Type: String
    Description: true or false to assign public IP to instances
    AllowedValues:
      - "true"
      - "false"
  AnsiblePublicKey:
    Type: String
    Description: Public key to authorized for ansible server
  NginxAMI:
    Type: String
    Description: AMI for Nginx instance
Conditions: 
  UsePrivateSubnet:
    Fn::Equals:
    - 'false'
    - !Ref AssignPublicIP
Mappings:
  AMI2RegionMap:
    us-east-1:
      '64' : ami-6d1c2007
    us-east-2:
      '64' : ami-6a2d760f
    us-west-1:
      '64' : ami-af4333cf
    us-west-2:
      '64' : ami-d2c924b2
    ap-northeast-2:
      '64' : ami-c74789a9
    ap-southeast-1:
      '64' : ami-f068a193
    ap-southeast-2:
      '64' : ami-fedafc9d
    ap-northeast-1:
      '64' : ami-eec1c380
    eu-central-1:
      '64' : ami-9bf712f4
    eu-west-1:
      '64' : ami-7abd0209
Resources:
#############
###NGINX#####
#############
  NginxInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - Ref: NginxIAMRole
  NginxIAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"
      Policies:
      - PolicyName: logs
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - logs:CreateLogGroup
            - logs:CreateLogStream
            - logs:PutLogEvents
            - logs:DescribeLogStreams
            Resource:
            - arn:aws:logs:*:*:*
  NginxGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - Ngnix
            - Ref: Project
            - Ref: Environment
        PropagateAtLaunch: 'true'
      - Key: Environment
        Value:
          Ref: Environment
        PropagateAtLaunch: 'true'
      - Key: Project
        Value:
          Ref: Project
        PropagateAtLaunch: 'true'
      - Key: Role
        Value: nginx
        PropagateAtLaunch: 'true'
      LaunchConfigurationName:
        Ref: NginxLaunchConfig
      MinSize: !Ref MinSizeNginx
      MaxSize: !Ref MaxSizeNginx
      LoadBalancerNames:
      - Ref: NginxElasticLoadBalancer
      VPCZoneIdentifier:
        !If
          - UsePrivateSubnet
          - - Fn::ImportValue: !Sub "${VPCStackName}-PrivateSubnetA"
            - Fn::ImportValue: !Sub "${VPCStackName}-PrivateSubnetB"
          - - Fn::ImportValue: !Sub "${VPCStackName}-PublicSubnetB"
            - Fn::ImportValue: !Sub "${VPCStackName}-PublicSubnetB"
  NginxLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      IamInstanceProfile: !Ref NginxInstanceProfile
      KeyName:
        Ref: KeyName
      ImageId: !Ref NginxAMI
      SecurityGroups:
      - Ref: NginxSecurityGroup
      - Ref: SSHSecurityGroup
      InstanceType:
        Ref: NginxInstanceType
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -x
            mkdir /home/centos/.ssh
            echo "${AnsiblePublicKey}" >> /home/centos/.ssh/authorized_keys
            chown -R centos:centos /home/centos/.ssh
            chmod 600 /home/centos/.ssh/authorized_keys
  LoadBalancerNginxSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP and HTTPS access
      VpcId:
        Fn::ImportValue:
          !Sub "${VPCStackName}-VPC-id"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp:
          Fn::ImportValue:
            !Sub "${VPCStackName}-VpcCidr"
      - IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
        CidrIp:
          Fn::ImportValue:
            !Sub "${VPCStackName}-VpcCidr"
      Tags:
      - Key: Project
        Value:
          Ref: Project
      - Key: Environment
        Value:
          Ref: Environment
  NginxElasticLoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      LoadBalancerName:
        Fn::Join:
        - "-"
        - - ngnix
          - Ref: Project
          - Ref: Environment
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - "-"
          - - ngnix
            - Ref: Project
            - Ref: Environment
      - Key: Environment
        Value:
          Ref: Environment
      SecurityGroups:
      - Ref: LoadBalancerNginxSecurityGroup
      Subnets:
        - Fn::ImportValue: !Sub "${VPCStackName}-PublicSubnetA"
        - Fn::ImportValue: !Sub "${VPCStackName}-PublicSubnetB"
      CrossZone: 'true'
      Listeners:
      - LoadBalancerPort: '80'
        InstancePort: '80'
        Protocol: HTTP
      HealthCheck:
        Target: HTTP:80/
        HealthyThreshold: '3'
        UnhealthyThreshold: '5'
        Interval: '30'
        Timeout: '5'
  NginxSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue:
          !Sub "${VPCStackName}-VPC-id"
      GroupDescription: Enable SSH access and HTTP from the load balancer only
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        SourceSecurityGroupId:
          Ref: LoadBalancerNginxSecurityGroup
      - IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
        SourceSecurityGroupId:
          Ref: LoadBalancerNginxSecurityGroup
      - IpProtocol: tcp
        FromPort: '2049'
        ToPort: '2049'
        CidrIp:
          Fn::ImportValue:
            !Sub "${VPCStackName}-VpcCidr"
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue:
          !Sub "${VPCStackName}-VPC-id"
      GroupDescription: Enable SSH access and HTTP from the load balancer only
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp:
          Ref: XPeppersTrentoIp
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp:
          Fn::ImportValue:
            !Sub "${VPCStackName}-VpcCidr"
